Safari overflow fix

--- a/src/components/Pages/HomePage/NavBar/Navbar.css
+++ b/src/components/Pages/HomePage/NavBar/Navbar.css
@@ -8,7 +8,6 @@
   align-items: center;
   width: 100%;
   /* border: solid blue 1px; */
-  max-height: fit-content;
   overflow: visible;
 }
 
@@ -103,7 +102,6 @@
     position: sticky;
     top: 0;
     z-index: 1;
-    margin-top: 2rem;
     background-color: rgba(18, 18, 18, 0.95);
     backdrop-filter: blur(5px);
   }
